--- a/BScPCG/UnitTesting/UnitTesting.vcxproj
+++ b/BScPCG/UnitTesting/UnitTesting.vcxproj
@@ -124,8 +124,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Assets.cpp" />
     <ClCompile Include="Foo.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BScPCG\BScPCG.vcxproj">
