--- a/BScPCG/UnitTesting/UnitTesting.vcxproj
+++ b/BScPCG/UnitTesting/UnitTesting.vcxproj
@@ -127,8 +127,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AssetsTest.cpp" />
+    <ClCompile Include="CameraTest.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ModelTest.cpp" />
+    <ClCompile Include="RendererTest.cpp" />
+    <ClCompile Include="RenderQueueTest.cpp" />
+    <ClCompile Include="ShaderTest.cpp" />
     <ClCompile Include="TextureTest.cpp" />
   </ItemGroup>
   <ItemGroup>
