Added GLWidget to the QT project. It's currently drawing a black triangle on a red background.

--- a/BScPCG/BScPCG/BScPCG.vcxproj
+++ b/BScPCG/BScPCG/BScPCG.vcxproj
@@ -70,10 +70,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)build\</OutDir>
-    <TargetName>$(ProjectName)d</TargetName>
+    <TargetName>elicras</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)build\</OutDir>
+    <TargetName>elicras</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
