--- a/QT/build-CityGenerator-Desktop_Qt_5_8_0_MSVC2015_32bit-Debug/Makefile.Debug
+++ b/QT/build-CityGenerator-Desktop_Qt_5_8_0_MSVC2015_32bit-Debug/Makefile.Debug
@@ -497,6 +497,7 @@ debug\moc_glwidget.cpp: ..\..\BScPCG\include\GL\glew.h \
 		..\..\BScPCG\BScPCG\Renderer.h \
 		..\..\BScPCG\BScPCG\Shader.h \
 		..\..\BScPCG\BScPCG\Camera.h \
+		..\..\BScPCG\BScPCG\Array.h \
 		..\CityGenerator\glwidget.h \
 		debug\moc_predefs.h \
 		D:\Qt\5.8\msvc2015\bin\moc.exe
@@ -723,7 +724,8 @@ ui_mainwindow.h: ..\CityGenerator\mainwindow.ui \
 		..\..\BScPCG\BScPCG\Texture.h \
 		..\..\BScPCG\BScPCG\Renderer.h \
 		..\..\BScPCG\BScPCG\Shader.h \
-		..\..\BScPCG\BScPCG\Camera.h
+		..\..\BScPCG\BScPCG\Camera.h \
+		..\..\BScPCG\BScPCG\Array.h
 	D:\Qt\5.8\msvc2015\bin\uic.exe ..\CityGenerator\mainwindow.ui -o ui_mainwindow.h
 
 compiler_yacc_decl_make_all:
@@ -970,6 +972,11 @@ debug\mainwindow.obj: ..\CityGenerator\mainwindow.cpp ../CityGenerator/mainwindo
 		D:\Qt\5.8\msvc2015\include\QtGui\qinputmethod.h \
 		D:\Qt\5.8\msvc2015\include\QtWidgets\QButtonGroup \
 		D:\Qt\5.8\msvc2015\include\QtWidgets\qbuttongroup.h \
+		D:\Qt\5.8\msvc2015\include\QtWidgets\QGridLayout \
+		D:\Qt\5.8\msvc2015\include\QtWidgets\qgridlayout.h \
+		D:\Qt\5.8\msvc2015\include\QtWidgets\qlayout.h \
+		D:\Qt\5.8\msvc2015\include\QtWidgets\qlayoutitem.h \
+		D:\Qt\5.8\msvc2015\include\QtWidgets\qboxlayout.h \
 		D:\Qt\5.8\msvc2015\include\QtWidgets\QHeaderView \
 		D:\Qt\5.8\msvc2015\include\QtWidgets\qheaderview.h \
 		D:\Qt\5.8\msvc2015\include\QtWidgets\qabstractitemview.h \
@@ -1101,7 +1108,8 @@ debug\mainwindow.obj: ..\CityGenerator\mainwindow.cpp ../CityGenerator/mainwindo
 		..\..\BScPCG\BScPCG\Texture.h \
 		..\..\BScPCG\BScPCG\Renderer.h \
 		..\..\BScPCG\BScPCG\Shader.h \
-		..\..\BScPCG\BScPCG\Camera.h
+		..\..\BScPCG\BScPCG\Camera.h \
+		..\..\BScPCG\BScPCG\Array.h
 
 debug\glwidget.obj: ..\CityGenerator\glwidget.cpp ../CityGenerator/glwidget.h \
 		..\..\BScPCG\include\GL\glew.h \
@@ -1317,7 +1325,8 @@ debug\glwidget.obj: ..\CityGenerator\glwidget.cpp ../CityGenerator/glwidget.h \
 		..\..\BScPCG\BScPCG\Texture.h \
 		..\..\BScPCG\BScPCG\Renderer.h \
 		..\..\BScPCG\BScPCG\Shader.h \
-		..\..\BScPCG\BScPCG\Camera.h
+		..\..\BScPCG\BScPCG\Camera.h \
+		..\..\BScPCG\BScPCG\Array.h
 
 debug\moc_mainwindow.obj: debug\moc_mainwindow.cpp 
 
