--- a/BScPCG/BScPCG/BScPCG.vcxproj.filters
+++ b/BScPCG/BScPCG/BScPCG.vcxproj.filters
@@ -49,6 +49,9 @@
     <ClCompile Include="SeedConverter.cpp">
       <Filter>Source\PCG</Filter>
     </ClCompile>
+    <ClCompile Include="Elicras.cpp">
+      <Filter>Source\PCG</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h">
@@ -103,6 +106,9 @@
       <Filter>Header\PCG</Filter>
     </ClInclude>
     <ClInclude Include="SeedConverter.h">
+      <Filter>Header\PCG</Filter>
+    </ClInclude>
+    <ClInclude Include="Elicras.h">
       <Filter>Header\PCG</Filter>
     </ClInclude>
   </ItemGroup>
