--- a/BScPCG/BScPCG/BScPCG.vcxproj
+++ b/BScPCG/BScPCG/BScPCG.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
+    <ClInclude Include="Array2D.h" />
     <ClInclude Include="Assets.h" />
     <ClInclude Include="BaseIncludes.h" />
     <ClInclude Include="Block.h" />
